--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "\"echo \"Error: no test specified\" && exit 1\""
   },
   "author": "Katie Kaupke",
-  "license": "ISC"
+  "license": "ISC",
   "dependencies": {
   	"twitter": "^1.7.1"
   }
